--- a/cadastro.html
+++ b/cadastro.html
@@ -16,7 +16,7 @@
     <div class="main-container">
         <div class="form-container">
             <div class="logo-container">
-                <img id="profileImagePreview" src="imagens/loguinho.png" alt="Pré-visualização da foto de perfil" />
+                <img id="profilePreview" src="imagens/loguinho.png" alt="Pré-visualização da foto de perfil" />
                 <input type="file" id="profileImageInput" accept="image/*" title="Clique para escolher uma foto" />
             </div>
             <p class="photo-hint">Clique na logo para adicionar foto (opcional)</p>
