--- a/inicio.html
+++ b/inicio.html
@@ -226,6 +226,19 @@
         </div>
     </div>
 
+    <div class="modal" id="inviteFriendsModal">
+        <div class="modal-box">
+            <div class="modal-header">
+                <h3>Convidar Amigos</h3>
+                <button class="btn-close" onclick="closeModal('inviteFriendsModal')" aria-label="Fechar modal">×</button>
+            </div>
+            <div class="modal-content">
+                <ul class="friends-list" id="invite-friends-list">
+                    </ul>
+            </div>
+        </div>
+    </div>
+
     <div id="toast-container"></div>
     <div id="loading" class="loading-overlay"></div>
     
