--- a/cadastrojogador.html
+++ b/cadastrojogador.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/cadastrojogador.css">
     <link rel="icon" href="imagens/loguinho2.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <header class="main-header">
