--- a/cadastrojogador.html
+++ b/cadastrojogador.html
@@ -88,6 +88,14 @@
     <script src="js/utils.js" defer></script> 
     <script src="js/auth_guard.js" defer></script> 
     <script src="js/cadastrojogador.js" defer></script>
+    <script>
+        (function(d){
+      var s = d.createElement("script");
+      s.setAttribute("data-account", "INSIRA_SEU_CÓDIGO_USERWAY_AQUI");
+      s.setAttribute("src", "https://cdn.userway.org/widget.js");
+      (d.body || d.head).appendChild(s);
+    })(document);
+    </script>
 
 </body>
 </html>
