--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
   <script src="js/firebase-config.js" defer></script>
   <script src="js/index.js" defer></script>
 
+  <script>
+    (function(d){
+      var s = d.createElement("script");
+      s.setAttribute("data-account", "INSIRA_SEU_CÓDIGO_USERWAY_AQUI");
+      s.setAttribute("src", "https://cdn.userway.org/widget.js");
+      (d.body || d.head).appendChild(s);
+    })(document);
+  </script>
+
 </body>
 
 </html>
