--- a/cadastrojogador.html
+++ b/cadastrojogador.html
@@ -24,13 +24,9 @@
         <div class="content-container">
             <div class="court-container">
                 <div class="court-image-container">
-                    <img src="imagens/futsal.png" alt="Quadra de Futsal" class="court-image">
+                    <img src="imagens/futsal.png" alt="Quadra" class="court-image" id="court-img">
                     
-                    <div class="position position-gk" data-position="Goleiro"></div>
-                    <div class="position position-fix" data-position="Fixo"></div>
-                    <div class="position position-ala-d" data-position="Ala Direita"></div>
-                    <div class="position position-ala-e" data-position="Ala Esquerda"></div>
-                    <div class="position position-piv" data-position="Pivô"></div>
+                    <div id="positions-wrapper"></div>
                 </div>
                 <div class="selected-position">
                     Posição na partida: <span id="selected-position-text">Nenhuma</span>
